partly fixed bug #12245: responsive design covers the main header
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@46534 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -4553,6 +4553,7 @@ div[id^="ilFormField"] {
 
 	div.ilLeftNavSpace {
 		padding: 0;
+		left: 0px !important;
 	}
 
 	div.ilContentFixed {
